[gd_scene load_steps=8 format=3 uid="uid://chld75je6ysiw"]

[ext_resource type="Script" path="res://player.gd" id="1_lr0y4"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="2_kpxss"]
[ext_resource type="PackedScene" uid="uid://dtg6c05bdvx2v" path="res://laser_gun.tscn" id="4_pq3kl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0od0o"]
radius = 44.0114

[sub_resource type="CircleShape2D" id="CircleShape2D_d23b1"]
radius = 58.0345

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hiv36"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrqs2"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
platform_floor_layers = 4294967040
script = ExtResource("1_lr0y4")

[node name="HappyBoo" parent="." instance=ExtResource("2_kpxss")]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -40)
shape = SubResource("CircleShape2D_0od0o")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="LaserGun" parent="." instance=ExtResource("4_pq3kl")]

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -27)
shape = SubResource("CircleShape2D_d23b1")
debug_color = Color(0.828364, 0.377644, 0.316754, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -119.0
offset_top = -145.0
offset_right = 126.0
offset_bottom = -114.0
theme_override_styles/background = SubResource("StyleBoxFlat_hiv36")
theme_override_styles/fill = SubResource("StyleBoxFlat_xrqs2")
value = 100.0
show_percentage = false
